--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "0c6cc5a8-2e8a-4015-a611-7b7ea61f7312",
    "metadata": {},
    "outputs": [],
@@ -86,8 +86,57 @@
     "\n",
     "\n",
     "def f():\n",
-    "    import os"
+    "    import math\n",
+    "    print(math)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "3b4e25d5-25ae-43da-bb74-e130d083df3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<module 'math' from '/Users/mfalce/anaconda3/envs/formation_ing/lib/python3.12/lib-dynload/math.cpython-312-darwin.so'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "f()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "9fd44a02-0874-4591-bed9-750b6736e19c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'math' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[13], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmath\u001b[49m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'math' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9cc221fc-097f-4e7e-8a8c-94c2f7fd7f36",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
