--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -110,11 +110,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "9fd44a02-0874-4591-bed9-750b6736e19c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/mfalce/anaconda3/envs/formation_ing/bin/python'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys \n",
+    "\n",
+    "sys.executable"
+   ]
   },
   {
    "cell_type": "code",
@@ -122,7 +137,11 @@
    "id": "9cc221fc-097f-4e7e-8a8c-94c2f7fd7f36",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sys import executable\n",
+    "\n",
+    "exe"
+   ]
   }
  ],
  "metadata": {
