--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -133,15 +133,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "9cc221fc-097f-4e7e-8a8c-94c2f7fd7f36",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/mfalce/anaconda3/envs/formation_ing/bin/python'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from sys import executable\n",
+    "from sys import executable, exit \n",
     "\n",
-    "exe"
+    "executable"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d436892d-67e8-4fcb-98bf-34c2a6f370a8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
