--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -160,7 +160,10 @@
    "id": "d436892d-67e8-4fcb-98bf-34c2a6f370a8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from math import cos as math_cos\n",
+    "from numpy import cos as numpy_cos "
+   ]
   }
  ],
  "metadata": {
