--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -162,7 +162,10 @@
    "outputs": [],
    "source": [
     "from math import cos as math_cos\n",
-    "from numpy import cos as numpy_cos "
+    "from numpy import cos as numpy_cos \n",
+    "\n",
+    "import numpy as np \n",
+    "import pandas as pd "
    ]
   }
  ],
