--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -155,18 +155,48 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d436892d-67e8-4fcb-98bf-34c2a6f370a8",
+   "cell_type": "markdown",
+   "id": "5a4fca5d-8537-44f7-b59c-1b81e7d9c760",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```\n",
     "from math import cos as math_cos\n",
     "from numpy import cos as numpy_cos \n",
     "\n",
     "import numpy as np \n",
-    "import pandas as pd "
+    "import pandas as pd\n",
+    "\n",
+    "````\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "4ae00926-7f00-4e61-84c5-7497e3c6a3f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function max>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec216c8f-eac1-47f4-8ee6-3054aab9e53d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
