--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -171,8 +171,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "4ae00926-7f00-4e61-84c5-7497e3c6a3f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "ec216c8f-eac1-47f4-8ee6-3054aab9e53d",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[23], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;43mmax\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "max([1, 2, 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "dc711ffc-1866-4fec-97d4-72e50cf491a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import builtins "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "b8d8437f-da38-469b-9837-85dcfe463894",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max = builtins.max"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "7aeb5a06-2dcd-48a8-86ca-15c88fb344c1",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +233,7 @@
        "<function max>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,10 +245,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec216c8f-eac1-47f4-8ee6-3054aab9e53d",
+   "id": "131ea6e1-aee7-4647-9ccb-62d6aba23fdc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from "
+   ]
   }
  ],
  "metadata": {
