--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -5,6 +5,7 @@
    "id": "8e879a8a-a1be-49f1-8f7d-1b4692309f28",
    "metadata": {},
    "source": [
+    "```\n",
     "# OOP\n",
     "    * properties\n",
     "    * context managers\n",
@@ -17,7 +18,8 @@
     "# imports de modules \n",
     "\n",
     "# Flask \n",
-    "# Pandas "
+    "# Pandas\n",
+    "````"
    ]
   },
   {
