--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -245,12 +245,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "084d4afc-7d00-444c-a275-33c901070e79",
+   "metadata": {},
+   "source": [
+    "#"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "131ea6e1-aee7-4647-9ccb-62d6aba23fdc",
+   "execution_count": 28,
+   "id": "72c78c26-5f49-4e34-86b4-c795eb8fa9a1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Personne:\n",
+    "    def __init__(self, nom_attribut, age):\n",
+    "        self.nom = nom_attribut\n",
+    "        self.age = age\n",
+    "\n",
+    "    def presente(self):\n",
+    "        print(f\"Mon nom est {self.nom}\")"
+   ]
   },
   {
    "cell_type": "code",
