--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -249,7 +249,7 @@
    "id": "084d4afc-7d00-444c-a275-33c901070e79",
    "metadata": {},
    "source": [
-    "#"
+    "# Context managers"
    ]
   },
   {
@@ -265,13 +265,40 @@
     "        self.age = age\n",
     "\n",
     "    def presente(self):\n",
-    "        print(f\"Mon nom est {self.nom}\")"
+    "        print(f\"Mon nom est {self.nom}\")\n",
+    "\n",
+    "    def __enter__(self):\n",
+    "        print(\"dans ent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "2db9e85e-03df-4088-9809-5e651c4aa906",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'Personne' object does not support the context manager protocol",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[30], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m matthieu \u001b[38;5;241m=\u001b[39m Personne(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmatthieu\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m33\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;43;01mwith\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mmatthieu\u001b[49m\u001b[43m:\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mprint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcoucou\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'Personne' object does not support the context manager protocol"
+     ]
+    }
+   ],
+   "source": [
+    "matthieu = Personne(\"matthieu\", 33)\n",
+    "with matthieu:\n",
+    "    print(\"coucou\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2db9e85e-03df-4088-9809-5e651c4aa906",
+   "id": "fe102828-4253-45f8-8fc8-8a9024fe2368",
    "metadata": {},
    "outputs": [],
    "source": []
