--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "id": "72c78c26-5f49-4e34-86b4-c795eb8fa9a1",
    "metadata": {},
    "outputs": [],
@@ -268,24 +268,27 @@
     "        print(f\"Mon nom est {self.nom}\")\n",
     "\n",
     "    def __enter__(self):\n",
-    "        print(\"dans ent"
+    "        print(\"dans enter\")\n",
+    "\n",
+    "    def __exit__(self, *args):\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "2db9e85e-03df-4088-9809-5e651c4aa906",
    "metadata": {},
    "outputs": [
     {
      "ename": "TypeError",
-     "evalue": "'Personne' object does not support the context manager protocol",
+     "evalue": "'Personne' object does not support the context manager protocol (missed __exit__ method)",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[30], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m matthieu \u001b[38;5;241m=\u001b[39m Personne(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmatthieu\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m33\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;43;01mwith\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mmatthieu\u001b[49m\u001b[43m:\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mprint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcoucou\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'Personne' object does not support the context manager protocol"
+      "Cell \u001b[0;32mIn[32], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m matthieu \u001b[38;5;241m=\u001b[39m Personne(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmatthieu\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m33\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;43;01mwith\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mmatthieu\u001b[49m\u001b[43m:\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mprint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcoucou\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'Personne' object does not support the context manager protocol (missed __exit__ method)"
      ]
     }
    ],
@@ -301,7 +304,9 @@
    "id": "fe102828-4253-45f8-8fc8-8a9024fe2368",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "matthieu.presente()"
+   ]
   }
  ],
  "metadata": {
