--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -305,7 +305,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "matthieu.presente()"
+    "matthieu.presente() <=> type(matthieu) => Personne => Personne.presente(type(matthieu))"
    ]
   }
  ],
