--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "id": "72c78c26-5f49-4e34-86b4-c795eb8fa9a1",
    "metadata": {},
    "outputs": [],
@@ -271,7 +271,7 @@
     "        print(\"dans enter\")\n",
     "\n",
     "    def __exit__(self, *args):\n",
-    "        "
+    "        print(\"dans exit\") "
    ]
   },
   {
@@ -299,13 +299,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fe102828-4253-45f8-8fc8-8a9024fe2368",
+   "cell_type": "markdown",
+   "id": "1699fb55-2495-4a53-8f45-76dd03f66cc9",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "matthieu.presente() <=> type(matthieu) => Personne => Personne.presente(type(matthieu))"
+    "matthieu.presente() <=> type(matthieu) => Personne => (methode de classe) Personne.presente(type(matthieu))"
    ]
   }
  ],
