--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "id": "72c78c26-5f49-4e34-86b4-c795eb8fa9a1",
    "metadata": {},
    "outputs": [],
@@ -271,31 +271,41 @@
     "        print(\"dans enter\")\n",
     "\n",
     "    def __exit__(self, *args):\n",
-    "        print(\"dans exit\") "
+    "        print(\"dans exit\", args) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "id": "2db9e85e-03df-4088-9809-5e651c4aa906",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'Personne' object does not support the context manager protocol (missed __exit__ method)",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dans enter\n",
+      "coucou\n",
+      "dans exit (<class 'ZeroDivisionError'>, ZeroDivisionError('division by zero'), <traceback object at 0x10afb7240>)\n"
+     ]
+    },
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[32], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m matthieu \u001b[38;5;241m=\u001b[39m Personne(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmatthieu\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m33\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;43;01mwith\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mmatthieu\u001b[49m\u001b[43m:\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mprint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcoucou\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'Personne' object does not support the context manager protocol (missed __exit__ method)"
+      "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[37], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m matthieu:\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcoucou\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 4\u001b[0m     \u001b[38;5;241;43m1\u001b[39;49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;241;43m0\u001b[39;49m\n",
+      "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
      ]
     }
    ],
    "source": [
     "matthieu = Personne(\"matthieu\", 33)\n",
     "with matthieu:\n",
-    "    print(\"coucou\")"
+    "    print(\"coucou\")\n",
+    "    1/0"
    ]
   },
   {
