--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -315,6 +315,35 @@
    "source": [
     "matthieu.presente() <=> type(matthieu) => Personne => (methode de classe) Personne.presente(type(matthieu))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "f535b09c-9ba8-4975-a0ea-f3ce76b94c6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hasattr(matthieu, \"__enter__\") and hasattr(matthieu, \"__exit__\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad0a692a-996f-49bb-8507-c03b9fbb07ac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
