--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -269,6 +269,7 @@
     "\n",
     "    def __enter__(self):\n",
     "        print(\"dans enter\")\n",
+    "        return \"un truc\" \n",
     "\n",
     "    def __exit__(self, *args):\n",
     "        print(\"dans exit\", args) "
@@ -303,7 +304,7 @@
    ],
    "source": [
     "matthieu = Personne(\"matthieu\", 33)\n",
-    "with matthieu:\n",
+    "with matthieu as :\n",
     "    print(\"coucou\")\n",
     "    1/0"
    ]
