--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -344,7 +344,10 @@
    "id": "ad0a692a-996f-49bb-8507-c03b9fbb07ac",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open(\"...\", \"r\") a:\n",
+    "    f.read()"
+   ]
   }
  ],
  "metadata": {
