--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -335,7 +335,10 @@
    "source": [
     "class Timer():\n",
     "    def __init__(self):\n",
-    "        self."
+    "        self.start = None \n",
+    "        self.stop = None \n",
+    "\n",
+    "    def __enter__(self\n"
    ]
   },
   {
