--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -328,17 +328,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "ad0a692a-996f-49bb-8507-c03b9fbb07ac",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import time \n",
+    "\n",
     "class Timer():\n",
     "    def __init__(self):\n",
     "        self.start = None \n",
     "        self.stop = None \n",
     "\n",
-    "    def __enter__(self\n"
+    "    def __enter__(self):\n",
+    "        self.start = time.time()\n",
+    "        return self\n",
+    "\n",
+    "    def __exit__(self):\n",
+    "        \n",
+    "\n",
+    "with Timer() as start_time:\n"
    ]
   },
   {
