--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 47,
    "id": "72c78c26-5f49-4e34-86b4-c795eb8fa9a1",
    "metadata": {},
    "outputs": [],
@@ -271,28 +271,42 @@
     "        print(\"dans enter\")\n",
     "        return \"un truc\" \n",
     "\n",
-    "    def __exit__(self, *args):\n",
+    "    def __exit__(self, exception_type, exception_instance, traceback):\n",
+    "        print(args)\n",
     "        print(\"dans exit\", args) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
    "id": "2db9e85e-03df-4088-9809-5e651c4aa906",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (850952121.py, line 2)",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dans enter\n",
+      "coucou\n",
+      "(<class 'ZeroDivisionError'>, ZeroDivisionError('division by zero'), <traceback object at 0x10afd6180>)\n",
+      "dans exit (<class 'ZeroDivisionError'>, ZeroDivisionError('division by zero'), <traceback object at 0x10afd6180>)\n"
+     ]
+    },
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[44], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    with matthieu as :\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[48], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m matthieu:\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcoucou\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 4\u001b[0m     \u001b[38;5;241;43m1\u001b[39;49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;241;43m0\u001b[39;49m\n",
+      "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
      ]
     }
    ],
    "source": [
     "matthieu = Personne(\"matthieu\", 33)\n",
-    "with matthieu as :\n",
+    "with matthieu:\n",
     "    print(\"coucou\")\n",
     "    1/0"
    ]
@@ -328,10 +342,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 49,
    "id": "ad0a692a-996f-49bb-8507-c03b9fbb07ac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.004685163497925\n"
+     ]
+    }
+   ],
    "source": [
     "import time \n",
     "\n",
@@ -342,18 +364,28 @@
     "\n",
     "    def __enter__(self):\n",
     "        self.start = time.time()\n",
-    "        return self\n",
+    "        return self.start\n",
     "\n",
-    "    def __exit__(self):\n",
-    "        \n",
+    "    def __exit__(self, *args):\n",
+    "        self.stop = time.time()\n",
+    "        print(self.stop - self.start)\n",
     "\n",
-    "with Timer() as start_time:\n"
+    "with Timer() as start_time:\n",
+    "    time.sleep(2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "a149f851-5fd4-44ec-a6a2-98803e051942",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2bcd460-6db4-4af2-a956-4a4b11c70015",
    "metadata": {},
    "outputs": [],
    "source": []
