--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 52,
    "id": "ad0a692a-996f-49bb-8507-c03b9fbb07ac",
    "metadata": {},
    "outputs": [
@@ -350,7 +350,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.004685163497925\n"
+      "timer.start=1705582050.85328\n",
+      "2.0037198066711426\n"
      ]
     }
    ],
@@ -364,13 +365,14 @@
     "\n",
     "    def __enter__(self):\n",
     "        self.start = time.time()\n",
-    "        return self.start\n",
+    "        return self\n",
     "\n",
     "    def __exit__(self, *args):\n",
     "        self.stop = time.time()\n",
     "        print(self.stop - self.start)\n",
     "\n",
-    "with Timer() as start_time:\n",
+    "with Timer() as timer:\n",
+    "    print(f\"{timer.start=}\")\n",
     "    time.sleep(2)"
    ]
   },
