--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -378,11 +378,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "a149f851-5fd4-44ec-a6a2-98803e051942",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Harry Potter 1\n",
+      "Harry Potter 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Bibliotheques:\n",
+    "    def __init__(self, livres: list[str]):\n",
+    "        self.livres = livres\n",
+    "\n",
+    "b = Bibliotheques([\"Harry Potter 1\", \"Harry Potter 2\"])\n",
+    "for livre in b.livres: \n",
+    "    print(livre)"
+   ]
   },
   {
    "cell_type": "code",
