--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 56,
    "id": "a149f851-5fd4-44ec-a6a2-98803e051942",
    "metadata": {},
    "outputs": [
@@ -396,8 +396,11 @@
     "    def __init__(self, livres: list[str]):\n",
     "        self.livres = livres\n",
     "\n",
+    "    def __iter__(self):\n",
+    "        return iter(self.livres)\n",
+    "\n",
     "b = Bibliotheques([\"Harry Potter 1\", \"Harry Potter 2\"])\n",
-    "for livre in b.livres: \n",
+    "for livre in b: \n",
     "    print(livre)"
    ]
   },
