--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 57,
    "id": "a149f851-5fd4-44ec-a6a2-98803e051942",
    "metadata": {},
    "outputs": [
@@ -397,6 +397,8 @@
     "        self.livres = livres\n",
     "\n",
     "    def __iter__(self):\n",
+    "        # différence entre itérable / générateurs et itérateurs\n",
+    "        # https://stackoverflow.com/questions/2776829/difference-between-pythons-generators-and-iterators\n",
     "        return iter(self.livres)\n",
     "\n",
     "b = Bibliotheques([\"Harry Potter 1\", \"Harry Potter 2\"])\n",
