--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -528,8 +528,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "f3f196e1-1be5-4d48-865d-847ef5dca07e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "J2.ipynb          \u001b[1m\u001b[36mdemo_venv\u001b[m\u001b[m/        imports.py        test_fizzbuzz.py\n",
+      "J3.ipynb          example_path.py   my_map.py\n",
+      "J4.ipynb          exceptions.py     return_code.py\n",
+      "\u001b[1m\u001b[36m__pycache__\u001b[m\u001b[m/      fizzbuzz.py       sandwich.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e560d11-3b21-4163-b5ba-8ca296b965b0",
    "metadata": {},
    "outputs": [],
    "source": []
