--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 65,
    "id": "f3f196e1-1be5-4d48-865d-847ef5dca07e",
    "metadata": {},
    "outputs": [
@@ -536,15 +536,71 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "J2.ipynb          \u001b[1m\u001b[36mdemo_venv\u001b[m\u001b[m/        imports.py        test_fizzbuzz.py\n",
-      "J3.ipynb          example_path.py   my_map.py\n",
-      "J4.ipynb          exceptions.py     return_code.py\n",
-      "\u001b[1m\u001b[36m__pycache__\u001b[m\u001b[m/      fizzbuzz.py       sandwich.py\n"
+      "import typing\n",
+      "\n",
+      "# on est obligé de définir des types génériques\n",
+      "type1 = typing.TypeVar(\"type1\")\n",
+      "type2 = typing.TypeVar(\"type2\")\n",
+      "\n",
+      "\n",
+      "def my_map(func: typing.Callable[[type1], type2], elements: list[type1]) -> list[type2]:\n",
+      "    \"\"\"reimplémentation de map\n",
+      "\n",
+      "    Args:\n",
+      "        func (typing.Callable[[type1], type2]): la fonction a appliquer\n",
+      "        elements (list[type1]): la liste d'éléments sur laquelle appliquer la fonction\n",
+      "\n",
+      "    Returns:\n",
+      "        list[type2]: la liste où on a appliqué la fonction sur chaque élément\n",
+      "    \"\"\"\n",
+      "    res = []\n",
+      "    for element in elements:\n",
+      "        tmp = func(element)\n",
+      "        res.append(tmp)\n",
+      "    return res\n",
+      "\n",
+      "\n",
+      "def my_filter(\n",
+      "    func: typing.Callable[[type1], bool], elements: list[type1]\n",
+      ") -> list[type1]:\n",
+      "    \"\"\"reimplémentation de filter\n",
+      "\n",
+      "    Args:\n",
+      "        func (typing.Callable[[type1], bool]): la fonction de test\n",
+      "        elements (list[type1]): la liste d'éléments que l'on veut filter\n",
+      "\n",
+      "    Returns:\n",
+      "        list[type2]: la liste où on uniquement les élements qui retournent vrai pour la fonction de test\n",
+      "    \"\"\"\n",
+      "    res = []\n",
+      "    for element in elements:\n",
+      "        if func(element):\n",
+      "            res.append(element)\n",
+      "    return res\n",
+      "\n",
+      "\n",
+      "def f(x: int) -> str:\n",
+      "    return str(x)\n",
+      "\n",
+      "\n",
+      "def f2(x: str) -> int:\n",
+      "    return int(x)\n",
+      "\n",
+      "\n",
+      "def f3(x: int) -> int:\n",
+      "    return x\n",
+      "\n",
+      "\n",
+      "a = my_map(f, [1, 2, 3])\n",
+      "b = my_map(f3, [1, 2])\n"
      ]
     }
    ],
    "source": [
-    "with open(\""
+    "with open(\"my_map.py\") as f:\n",
+    "    for line in f:\n",
+    "        line = line.rstrip()\n",
+    "        print(line)"
    ]
   },
   {
