--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 68,
    "id": "f3f196e1-1be5-4d48-865d-847ef5dca07e",
    "metadata": {},
    "outputs": [
@@ -536,71 +536,75 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "import typing\n",
-      "\n",
-      "# on est obligé de définir des types génériques\n",
-      "type1 = typing.TypeVar(\"type1\")\n",
-      "type2 = typing.TypeVar(\"type2\")\n",
-      "\n",
-      "\n",
-      "def my_map(func: typing.Callable[[type1], type2], elements: list[type1]) -> list[type2]:\n",
-      "    \"\"\"reimplémentation de map\n",
-      "\n",
-      "    Args:\n",
-      "        func (typing.Callable[[type1], type2]): la fonction a appliquer\n",
-      "        elements (list[type1]): la liste d'éléments sur laquelle appliquer la fonction\n",
-      "\n",
-      "    Returns:\n",
-      "        list[type2]: la liste où on a appliqué la fonction sur chaque élément\n",
-      "    \"\"\"\n",
-      "    res = []\n",
-      "    for element in elements:\n",
-      "        tmp = func(element)\n",
-      "        res.append(tmp)\n",
-      "    return res\n",
-      "\n",
-      "\n",
-      "def my_filter(\n",
-      "    func: typing.Callable[[type1], bool], elements: list[type1]\n",
-      ") -> list[type1]:\n",
-      "    \"\"\"reimplémentation de filter\n",
-      "\n",
-      "    Args:\n",
-      "        func (typing.Callable[[type1], bool]): la fonction de test\n",
-      "        elements (list[type1]): la liste d'éléments que l'on veut filter\n",
-      "\n",
-      "    Returns:\n",
-      "        list[type2]: la liste où on uniquement les élements qui retournent vrai pour la fonction de test\n",
-      "    \"\"\"\n",
-      "    res = []\n",
-      "    for element in elements:\n",
-      "        if func(element):\n",
-      "            res.append(element)\n",
-      "    return res\n",
-      "\n",
-      "\n",
-      "def f(x: int) -> str:\n",
-      "    return str(x)\n",
-      "\n",
-      "\n",
-      "def f2(x: str) -> int:\n",
-      "    return int(x)\n",
-      "\n",
-      "\n",
-      "def f3(x: int) -> int:\n",
-      "    return x\n",
-      "\n",
-      "\n",
-      "a = my_map(f, [1, 2, 3])\n",
-      "b = my_map(f3, [1, 2])\n"
+      "['import typing']\n",
+      "['import typing', '']\n",
+      "['import typing', '', '# on est obligé de définir des types génériques']\n",
+      "['import typing', '', '# on est obligé de définir des types génériques', 'type1 = typing.TypeVar(\"type1\")']\n",
+      "['import typing', '', '# on est obligé de définir des types génériques', 'type1 = typing.TypeVar(\"type1\")', 'type2 = typing.TypeVar(\"type2\")']\n",
+      "['', '# on est obligé de définir des types génériques', 'type1 = typing.TypeVar(\"type1\")', 'type2 = typing.TypeVar(\"type2\")', '']\n",
+      "['# on est obligé de définir des types génériques', 'type1 = typing.TypeVar(\"type1\")', 'type2 = typing.TypeVar(\"type2\")', '', '']\n",
+      "['type1 = typing.TypeVar(\"type1\")', 'type2 = typing.TypeVar(\"type2\")', '', '', 'def my_map(func: typing.Callable[[type1], type2], elements: list[type1]) -> list[type2]:']\n",
+      "['type2 = typing.TypeVar(\"type2\")', '', '', 'def my_map(func: typing.Callable[[type1], type2], elements: list[type1]) -> list[type2]:', '    \"\"\"reimplémentation de map']\n",
+      "['', '', 'def my_map(func: typing.Callable[[type1], type2], elements: list[type1]) -> list[type2]:', '    \"\"\"reimplémentation de map', '']\n",
+      "['', 'def my_map(func: typing.Callable[[type1], type2], elements: list[type1]) -> list[type2]:', '    \"\"\"reimplémentation de map', '', '    Args:']\n",
+      "['def my_map(func: typing.Callable[[type1], type2], elements: list[type1]) -> list[type2]:', '    \"\"\"reimplémentation de map', '', '    Args:', '        func (typing.Callable[[type1], type2]): la fonction a appliquer']\n",
+      "['    \"\"\"reimplémentation de map', '', '    Args:', '        func (typing.Callable[[type1], type2]): la fonction a appliquer', \"        elements (list[type1]): la liste d'éléments sur laquelle appliquer la fonction\"]\n",
+      "['', '    Args:', '        func (typing.Callable[[type1], type2]): la fonction a appliquer', \"        elements (list[type1]): la liste d'éléments sur laquelle appliquer la fonction\", '']\n",
+      "['    Args:', '        func (typing.Callable[[type1], type2]): la fonction a appliquer', \"        elements (list[type1]): la liste d'éléments sur laquelle appliquer la fonction\", '', '    Returns:']\n",
+      "['        func (typing.Callable[[type1], type2]): la fonction a appliquer', \"        elements (list[type1]): la liste d'éléments sur laquelle appliquer la fonction\", '', '    Returns:', '        list[type2]: la liste où on a appliqué la fonction sur chaque élément']\n",
+      "[\"        elements (list[type1]): la liste d'éléments sur laquelle appliquer la fonction\", '', '    Returns:', '        list[type2]: la liste où on a appliqué la fonction sur chaque élément', '    \"\"\"']\n",
+      "['', '    Returns:', '        list[type2]: la liste où on a appliqué la fonction sur chaque élément', '    \"\"\"', '    res = []']\n",
+      "['    Returns:', '        list[type2]: la liste où on a appliqué la fonction sur chaque élément', '    \"\"\"', '    res = []', '    for element in elements:']\n",
+      "['        list[type2]: la liste où on a appliqué la fonction sur chaque élément', '    \"\"\"', '    res = []', '    for element in elements:', '        tmp = func(element)']\n",
+      "['    \"\"\"', '    res = []', '    for element in elements:', '        tmp = func(element)', '        res.append(tmp)']\n",
+      "['    res = []', '    for element in elements:', '        tmp = func(element)', '        res.append(tmp)', '    return res']\n",
+      "['    for element in elements:', '        tmp = func(element)', '        res.append(tmp)', '    return res', '']\n",
+      "['        tmp = func(element)', '        res.append(tmp)', '    return res', '', '']\n",
+      "['        res.append(tmp)', '    return res', '', '', 'def my_filter(']\n",
+      "['    return res', '', '', 'def my_filter(', '    func: typing.Callable[[type1], bool], elements: list[type1]']\n",
+      "['', '', 'def my_filter(', '    func: typing.Callable[[type1], bool], elements: list[type1]', ') -> list[type1]:']\n",
+      "['', 'def my_filter(', '    func: typing.Callable[[type1], bool], elements: list[type1]', ') -> list[type1]:', '    \"\"\"reimplémentation de filter']\n",
+      "['def my_filter(', '    func: typing.Callable[[type1], bool], elements: list[type1]', ') -> list[type1]:', '    \"\"\"reimplémentation de filter', '']\n",
+      "['    func: typing.Callable[[type1], bool], elements: list[type1]', ') -> list[type1]:', '    \"\"\"reimplémentation de filter', '', '    Args:']\n",
+      "[') -> list[type1]:', '    \"\"\"reimplémentation de filter', '', '    Args:', '        func (typing.Callable[[type1], bool]): la fonction de test']\n",
+      "['    \"\"\"reimplémentation de filter', '', '    Args:', '        func (typing.Callable[[type1], bool]): la fonction de test', \"        elements (list[type1]): la liste d'éléments que l'on veut filter\"]\n",
+      "['', '    Args:', '        func (typing.Callable[[type1], bool]): la fonction de test', \"        elements (list[type1]): la liste d'éléments que l'on veut filter\", '']\n",
+      "['    Args:', '        func (typing.Callable[[type1], bool]): la fonction de test', \"        elements (list[type1]): la liste d'éléments que l'on veut filter\", '', '    Returns:']\n",
+      "['        func (typing.Callable[[type1], bool]): la fonction de test', \"        elements (list[type1]): la liste d'éléments que l'on veut filter\", '', '    Returns:', '        list[type2]: la liste où on uniquement les élements qui retournent vrai pour la fonction de test']\n",
+      "[\"        elements (list[type1]): la liste d'éléments que l'on veut filter\", '', '    Returns:', '        list[type2]: la liste où on uniquement les élements qui retournent vrai pour la fonction de test', '    \"\"\"']\n",
+      "['', '    Returns:', '        list[type2]: la liste où on uniquement les élements qui retournent vrai pour la fonction de test', '    \"\"\"', '    res = []']\n",
+      "['    Returns:', '        list[type2]: la liste où on uniquement les élements qui retournent vrai pour la fonction de test', '    \"\"\"', '    res = []', '    for element in elements:']\n",
+      "['        list[type2]: la liste où on uniquement les élements qui retournent vrai pour la fonction de test', '    \"\"\"', '    res = []', '    for element in elements:', '        if func(element):']\n",
+      "['    \"\"\"', '    res = []', '    for element in elements:', '        if func(element):', '            res.append(element)']\n",
+      "['    res = []', '    for element in elements:', '        if func(element):', '            res.append(element)', '    return res']\n",
+      "['    for element in elements:', '        if func(element):', '            res.append(element)', '    return res', '']\n",
+      "['        if func(element):', '            res.append(element)', '    return res', '', '']\n",
+      "['            res.append(element)', '    return res', '', '', 'def f(x: int) -> str:']\n",
+      "['    return res', '', '', 'def f(x: int) -> str:', '    return str(x)']\n",
+      "['', '', 'def f(x: int) -> str:', '    return str(x)', '']\n",
+      "['', 'def f(x: int) -> str:', '    return str(x)', '', '']\n",
+      "['def f(x: int) -> str:', '    return str(x)', '', '', 'def f2(x: str) -> int:']\n",
+      "['    return str(x)', '', '', 'def f2(x: str) -> int:', '    return int(x)']\n",
+      "['', '', 'def f2(x: str) -> int:', '    return int(x)', '']\n",
+      "['', 'def f2(x: str) -> int:', '    return int(x)', '', '']\n",
+      "['def f2(x: str) -> int:', '    return int(x)', '', '', 'def f3(x: int) -> int:']\n",
+      "['    return int(x)', '', '', 'def f3(x: int) -> int:', '    return x']\n",
+      "['', '', 'def f3(x: int) -> int:', '    return x', '']\n",
+      "['', 'def f3(x: int) -> int:', '    return x', '', '']\n",
+      "['def f3(x: int) -> int:', '    return x', '', '', 'a = my_map(f, [1, 2, 3])']\n",
+      "['    return x', '', '', 'a = my_map(f, [1, 2, 3])', 'b = my_map(f3, [1, 2])']\n"
      ]
     }
    ],
    "source": [
+    "lines = []\n",
     "with open(\"my_map.py\") as f:\n",
     "    for line in f:\n",
     "        line = line.rstrip()\n",
-    "        print(line)"
+    "        lines.append(line)\n",
+    "        if len(lines) > 5:\n",
+    "            lines.pop(0)\n",
+    "        print(lines)"
    ]
   },
   {
