--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 70,
    "id": "f3f196e1-1be5-4d48-865d-847ef5dca07e",
    "metadata": {},
    "outputs": [
@@ -604,6 +604,7 @@
     "        lines.append(line)\n",
     "        if len(lines) > 5:\n",
     "            lines.pop(0)\n",
+    "            # lines = lines[1:6]\n",
     "        print(lines)"
    ]
   },
