--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -610,8 +610,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "5e560d11-3b21-4163-b5ba-8ca296b965b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "deque(['p = pathlib.Path(\".\")\\n',\n",
+       "       'p2 = p / \"..\"\\n',\n",
+       "       'print(p2.resolve().absolute())\\n',\n",
+       "       'print([f for f in p2.glob(\"**/*\") if f.is_file()])\\n'],\n",
+       "      maxlen=4)"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "def tail(filename, n=10):\n",
+    "    'Return the last n lines of a file'\n",
+    "    with open(filename) as f:\n",
+    "        return deque(f, n)\n",
+    "\n",
+    "tail(\"./example_path.py\", 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e9e9e6d-6543-4012-a2c3-2f66d406722f",
    "metadata": {},
    "outputs": [],
    "source": []
