--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 76,
    "id": "5e560d11-3b21-4163-b5ba-8ca296b965b0",
    "metadata": {},
    "outputs": [
@@ -624,20 +624,22 @@
        "      maxlen=4)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from collections import deque\n",
+    "import pathlib\n",
     "\n",
     "def tail(filename, n=10):\n",
     "    'Return the last n lines of a file'\n",
     "    with open(filename) as f:\n",
     "        return deque(f, n)\n",
     "\n",
-    "tail(\"./example_path.py\", 4)"
+    "path = pathlib.Path(\".\") / \"example_path.py\"\n",
+    "tail(path, 4)"
    ]
   },
   {
