--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -638,7 +638,8 @@
     "    with open(filename) as f:\n",
     "        return deque(f, n)\n",
     "\n",
-    "path = pathlib.Path(\".\") / \"example_path.py\"\n",
+    "p = pathlib.Path(\".\") \n",
+    "path = p / \"example_path.py\"\n",
     "tail(path, 4)"
    ]
   },
