--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 77,
    "id": "5e560d11-3b21-4163-b5ba-8ca296b965b0",
    "metadata": {},
    "outputs": [
@@ -624,7 +624,7 @@
        "      maxlen=4)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,8 +645,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "id": "9e9e9e6d-6543-4012-a2c3-2f66d406722f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PosixPath('example_path.py')"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pathlib.Path.__truediv__(p, \"example_path.py\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b157d8a-fd2d-4a08-ba1a-63594c7c9753",
    "metadata": {},
    "outputs": [],
    "source": []
