--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -670,7 +670,10 @@
    "id": "5b157d8a-fd2d-4a08-ba1a-63594c7c9753",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Convertisseur:\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
