--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -666,14 +666,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "5b157d8a-fd2d-4a08-ba1a-63594c7c9753",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Convertisseur:\n",
-    "    "
+    "    def __init__(self, temperature_celcius):\n",
+    "        self.celcius = temperature_celcius\n",
+    "        self.kelvin = temperature_celcius + 273\n",
+    "\n",
+    "    def get_celcius(self):\n",
+    "        return self.celcius\n",
+    "\n",
+    "    def set_celcius(self, value):\n",
+    "        self.celcius = value\n",
+    "        self.kelvin = value + 273"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1776f3cf-df4c-4c6a-85e7-8b27cb3d4d03",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
