--- a/tape_en_cours/J4.ipynb
+++ b/tape_en_cours/J4.ipynb
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 82,
    "id": "5b157d8a-fd2d-4a08-ba1a-63594c7c9753",
    "metadata": {},
    "outputs": [],
@@ -675,19 +675,40 @@
     "    def __init__(self, temperature_celcius):\n",
     "        self.celcius = temperature_celcius\n",
     "        self.kelvin = temperature_celcius + 273\n",
-    "\n",
+    "    \n",
     "    def get_celcius(self):\n",
     "        return self.celcius\n",
     "\n",
     "    def set_celcius(self, value):\n",
     "        self.celcius = value\n",
-    "        self.kelvin = value + 273"
+    "\n",
+    "    def get_kelvin(self):\n",
+    "        return self.kelvin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "1776f3cf-df4c-4c6a-85e7-8b27cb3d4d03",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 283 283 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = Convertisseur(10)\n",
+    "print(c.get_celcius(), c.get_kelvin(), c.kelvin, c.celcius)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1776f3cf-df4c-4c6a-85e7-8b27cb3d4d03",
+   "id": "c2d15c80-a73c-4967-9c67-227eeb9635dd",
    "metadata": {},
    "outputs": [],
    "source": []
